# product-agent

./: .gitignore  AGENTS.md  README.md  dev.py  diagram.puml  main.py  pyproject.toml  requirements.txt
actions/: action.py  action_graph.py  action_node.py  react_loop.py
agents/: __init__.py  analyze_agent.py  base.py  decompose_agent.py  inventory_agent.py  read_agent.py  registry.py  report_agent.py  retrieve_agent.py  search_agent.py  summarize_agent.py  synthesize_agent.py  validate_agent.py
config/: provider_config.py  settings.py
core/: discord_runner.py  llm_factory.py  runner.py
discord_bot/: bot.py  channel_manager.py  formatters.py  review_gate.py  webhook_manager.py
flows/: ba_flow.py  pd_flow.py  planning_flow.py  product_flow.py
infrastructure/: logging.py  token_tracker.py
plan/: ask_review.py  clarify.py  model.py  plan_parser.py  plan_validator.py  planer.py  task.py  write_plan.py
providers/: providers.py
roles/: backend_dev.py  base_role.py  business_analyst.py  devops_engineer.py  frontend_dev.py  planner.py  product_manager.py  project_developer.py  registry.py  reporter.py  security_specialist.py  software_architect.py  tester.py  ui_ux_designer.py  vietnamese_translator.py
schemas/: __init__.py  agent_result.py  analysis.py  report.py  synthesis.py  tool_inputs.py
skills/: architect_skill.md  ba_skill.md  backend_skill.md  decompose_skill.md  devops_skill.md  frontend_skill.md  loader.py  plan_skill.md  planner_skill.md  pm_skill.md  project_developer_skill.md  react_skill.md  reporter_skill.md  retrieve_skill.md  uiux_skill.md  (+5 more)
(+44 files in other folders)
