[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "openai>=1.60.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
    "langchain-mcp-adapters>=0.1.0",
    "python-telegram-bot>=21.0.0",
    "langchain-text-splitters>=1.1.1",
    "langchain-community>=0.4.1",
    "google-search-results>=2.4.2",
    "python-docx>=1.2.0",
    "trafilatura>=1.12.0",
    "langchain-qdrant>=1.1.0",
    "discord>=2.3.2",
    "watchfiles>=1.1.1",
]
